Columnas para borrar consenso equipo

--- a/Notebooks/01LimpiarDatos/01_Ale_LimpiarDatos.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_LimpiarDatos.ipynb
@@ -2918,15 +2918,16 @@
    "outputs": [],
    "source": [
     "categ_lvl1 = ['Disaster Subgroup', 'Disaster Type','Disaster Subtype']\n",
-    "categ_lvl2_geo = ['Country','Region', 'Continent', 'Location', 'River Basin']\n",
+    "categ_lvl2_geo = ['Country','Region', 'Continent', 'Location'] # 'River Basin'\n",
     "categ_lvl2_geoloc = ['Latitude', 'Longitude'] # Estas pertenecen a la anterior pero es mejor separarlas debido a su carácter más específico\n",
-    "num_lvl2_temp = ['Local Time', 'Start Year','Start Month', 'Start Day', 'End Year', 'End Month', 'End Day'] # Son objects, evaluar si es necesario convertir a datetimes numéricas\n",
-    "categ_lvl2_time = ['Local Time']\n",
+    "num_lvl2_temp = ['Start Year','Start Month', 'End Year', 'End Month'] # Son objects, evaluar si es necesario convertir a datetimes numéricas\n",
+    "# De num_lvl2_temp eliminar: 'Local Time', 'Start Day', 'End Day'\n",
+    "# categ_lvl2_time = ['Local Time']\n",
     "categ_lvl2_fis = ['Origin', 'Associated Dis','Associated Dis2', 'Dis Mag Scale']\n",
-    "categ_lvl2_status = ['AID Contribution', 'OFDA Response', 'Appeal','Declaration']\n",
+    "categ_lvl2_status = ['AID Contribution', 'OFDA Response', 'Appeal','Declaration'] # Coincidir con World Risk Index\n",
     "# categ_lvl3_orgs = [] Se borraron los Adm Level y Admin Codes\n",
-    "num_lvl3_human_impact = ['Total Deaths', 'No Injured', 'No Affected', 'No Homeless', 'Total Affected']\n",
-    "num_lvl3_economic_impact = ['Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj']"
+    "# num_lvl3_human_impact = ['Total Deaths', 'No Injured', 'No Affected', 'No Homeless', 'Total Affected']\n",
+    "# num_lvl3_economic_impact = ['Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj']"
    ]
   },
   {
