--- a/Notebooks/00ExplorarDatos/00Ele_ExplorarDatos.ipynb
+++ b/Notebooks/00ExplorarDatos/00Ele_ExplorarDatos.ipynb
@@ -1180,7 +1180,9 @@
     }
    ],
    "source": [
-    "df.groupby (['Year', 'Continent'])['Disaster Type'].value_counts()"
+    "df_year_continent = df.groupby (['Year', 'Continent'])['Disaster Type'].value_counts()\n",
+    "\n",
+    "sns.catplot(data)"
    ]
   }
  ],
