Nota de error añadida en rename columns

--- a/Notebooks/00ExplorarDatos/00Ale_ExplorarDatos.ipynb
+++ b/Notebooks/00ExplorarDatos/00Ale_ExplorarDatos.ipynb
@@ -2852,8 +2852,9 @@
     }
    ],
    "source": [
-    "df.rename(columns={\"Reconstruction Costs ('000 US$)\": \"Reconstruction Costs\", \"Reconstruction Costs, Adjusted ('000 US$)\": \"Reconstruction Costs Adj\", \"Insured Damages ('000 US$)\": \"Insured Damages\", \"Insured Damages, Adjusted ('000 US$)\": \"Insured Damages, Adj\", \"Total Damages ('000 US$)\": \"Total Damages\", \"Total Damages, Adjusted ('000 US$)\": \"Total Damages, Adj\"})\n",
-    "df"
+    "# df.rename(columns={\"Reconstruction Costs ('000 US$)\": \"Reconstruction Costs\", \"Reconstruction Costs, Adjusted ('000 US$)\": \"Reconstruction Costs Adj\", \"Insured Damages ('000 US$)\": \"Insured Damages\", \"Insured Damages, Adjusted ('000 US$)\": \"Insured Damages, Adj\", \"Total Damages ('000 US$)\": \"Total Damages\", \"Total Damages, Adjusted ('000 US$)\": \"Total Damages, Adj\"})\n",
+    "# df\n",
+    "# Generó error: las columnas se agrupan en una sola"
    ]
   },
   {
