Corrección proceso de borrado y exportación con ; y utf-8

--- a/Notebooks/01LimpiarDatos/01_Ale_ReducirColumnas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_ReducirColumnas.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usando dataset 02desastres_paralimpiar.csv"
+    "Usando dataset ../Data/01CrudoNoEditar/01desastres_crudo_renamedcols.csv\n",
+    "\n",
+    "Es copia de 01desastres_crudo.csv pero habiendo renombrado antes las cols con ('000 US$) directamente desde el csv, ya que .rename() da error"
    ]
   },
   {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../Data/02ParaLimpiar/02desastres_paralimpiar.csv', encoding='latin-1', delimiter=';', engine='python')\n",
+    "df = pd.read_csv('../../Data/01CrudoNoEditar/01desastres_crudo_renamedcols.csv', encoding='latin-1', delimiter=';', engine='python')\n",
     "# encoding='utf8' da problemas\n",
     "# dejar engine='python' para evitar advertencias"
    ]
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +297,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +325,7 @@
        "(16636, 50)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +469,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,12 +483,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Columnas"
+    "## Columnas originales"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +509,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,11 +541,11 @@
     "No Homeless                                  float64, \n",
     "Total Affected                               float64, \n",
     "Reconstruction Costs                         float64, \n",
-    "Reconstruction Costs, Adjusted               float64, \n",
+    "Reconstruction Costs Adj                     float64, \n",
     "Insured Damages                              float64, \n",
-    "Insured Damages, Adjusted                    float64, \n",
+    "Insured Damages Adj                          float64, \n",
     "Total Damages                                float64, \n",
-    "Total Damages, Adjusted                      float64"
+    "Total Damages Adj                            float64"
    ]
   },
   {
@@ -551,9 +553,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Columnas con variables categóricas: 25\n",
-    "\n",
-    "Dis No, Glide, Disaster Group, Disaster Subgroup, Disaster Type, Disaster Subtype, Disaster Subsubtype, Event Name, Country, ISO, Region, Continent, Location, Origin, Associated Dis, Associated Dis2, OFDA Response, Appeal, Declaration, Dis Mag Scale, Latitude, Longitude, Local Time, River Basin"
+    "### Columnas con variables categóricas: 28\n",
+    " \n",
+    " 3   Glide                     1736 non-null   object \n",
+    " 4   Disaster Group            16636 non-null  object \n",
+    " 5   Disaster Subgroup         16636 non-null  object \n",
+    " 6   Disaster Type             16636 non-null  object \n",
+    " 7   Disaster Subtype          13313 non-null  object \n",
+    " 8   Disaster Subsubtype       1117 non-null   object \n",
+    " 9   Event Name                3969 non-null   object \n",
+    " 10  Country                   16636 non-null  object \n",
+    " 11  ISO                       16636 non-null  object \n",
+    " 12  Region                    16636 non-null  object \n",
+    " 13  Continent                 16636 non-null  object \n",
+    " 14  Location                  14825 non-null  object \n",
+    " 15  Origin                    4085 non-null   object \n",
+    " 16  Associated Dis            3593 non-null   object \n",
+    " 17  Associated Dis2           763 non-null    object \n",
+    " 18  OFDA Response             1716 non-null   object \n",
+    " 19  Appeal                    2559 non-null   object \n",
+    " 20  Declaration               3343 non-null   object\n",
+    " 23  Dis Mag Scale             15416 non-null  object \n",
+    " 24  Latitude                  2775 non-null   object \n",
+    " 25  Longitude                 2775 non-null   object \n",
+    " 26  Local Time                1156 non-null   object \n",
+    " 27  River Basin               1336 non-null   object\n",
+    " 45  CPI                       16530 non-null  object \n",
+    " 46  Adm Level                 8475 non-null   object \n",
+    " 47  Admin1 Code               5030 non-null   object \n",
+    " 48  Admin2 Code               4248 non-null   object \n",
+    " 49  Geo Locations             8475 non-null   object "
    ]
   },
   {
@@ -580,9 +609,11 @@
     "# categ_lvl2_time = ['Local Time']\n",
     "categ_lvl2_fis = ['Origin', 'Associated Dis','Associated Dis2', 'Dis Mag Scale']\n",
     "categ_lvl2_status = ['AID Contribution', 'OFDA Response', 'Appeal','Declaration'] # Coincidir con World Risk Index\n",
-    "# categ_lvl3_orgs = [] Se borraron los Adm Level y Admin Codes\n",
+    "# categ_lvl3_orgs = [] Borrar Adm Level, Admin1 Code y Admin2 Code\n",
+    "# Las siguientes de lvl3 human_impact y economic_impact se sacarían de dataset complementario:\n",
     "# num_lvl3_human_impact = ['Total Deaths', 'No Injured', 'No Affected', 'No Homeless', 'Total Affected']\n",
-    "# num_lvl3_economic_impact = ['Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj']"
+    "# num_lvl3_economic_impact = ['Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj']\n",
+    "# Faltan columnas (aquí se han puesto 43)"
    ]
   },
   {
@@ -592,7 +623,7 @@
    "source": [
     "## Criterio de borrado de columnas:\n",
     "* Demasiados nulls\n",
-    "* Categoría de columnas se puede encontrar más completa en dataset complementario\n",
+    "* Categoría de columnas más completa en dataset complementario\n",
     "* Reducir dataset para acotar proyecto"
    ]
   },
@@ -606,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +696,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1093,7 @@
        "[16636 rows x 50 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,11 +1156,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(columns=['Event Name', 'Disaster Group', 'Disaster Subsubtype', 'Glide', 'Local Time', 'Start Day', 'End Day', 'River Basin','Total Deaths', 'No Injured', 'No Affected', 'No Homeless', 'Total Affected', 'Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj', 'Adm Level', 'Admin1 Code', 'Admin2 Code', 'Geo Locations'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Dis No  Year   Seq Disaster Subgroup      Disaster Type   \n",
+      "0      1900-9002-CPV  1900  9002    Climatological            Drought  \\\n",
+      "1      1900-9001-IND  1900  9001    Climatological            Drought   \n",
+      "2      1902-0012-GTM  1902    12       Geophysical         Earthquake   \n",
+      "3      1902-0003-GTM  1902     3       Geophysical  Volcanic activity   \n",
+      "4      1902-0010-GTM  1902    10       Geophysical  Volcanic activity   \n",
+      "...              ...   ...   ...               ...                ...   \n",
+      "16631  2023-0110-ZMB  2023   110      Hydrological              Flood   \n",
+      "16632  2023-0068-ZMB  2023    68        Biological           Epidemic   \n",
+      "16633  2023-0095-ZWE  2023    95    Meteorological              Storm   \n",
+      "16634  2023-0022-SRB  2023    22      Hydrological              Flood   \n",
+      "16635  2023-0140-SSD  2023   140        Biological           Epidemic   \n",
+      "\n",
+      "        Disaster Subtype      Country  ISO           Region Continent  ...   \n",
+      "0                Drought   Cabo Verde  CPV   Western Africa    Africa  ...  \\\n",
+      "1                Drought        India  IND    Southern Asia      Asia  ...   \n",
+      "2        Ground movement    Guatemala  GTM  Central America  Americas  ...   \n",
+      "3               Ash fall    Guatemala  GTM  Central America  Americas  ...   \n",
+      "4               Ash fall    Guatemala  GTM  Central America  Americas  ...   \n",
+      "...                  ...          ...  ...              ...       ...  ...   \n",
+      "16631        Flash flood       Zambia  ZMB   Eastern Africa    Africa  ...   \n",
+      "16632  Bacterial disease       Zambia  ZMB   Eastern Africa    Africa  ...   \n",
+      "16633   Tropical cyclone     Zimbabwe  ZWE   Eastern Africa    Africa  ...   \n",
+      "16634     Riverine flood       Serbia  SRB  Southern Europe    Europe  ...   \n",
+      "16635  Bacterial disease  South Sudan  SSD  Northern Africa    Africa  ...   \n",
+      "\n",
+      "      AID Contribution Dis Mag Value Dis Mag Scale Latitude Longitude   \n",
+      "0                  NaN           NaN           Km2      NaN       NaN  \\\n",
+      "1                  NaN           NaN           Km2      NaN       NaN   \n",
+      "2                  NaN           8.0       Richter       14       -91   \n",
+      "3                  NaN           NaN           NaN      NaN       NaN   \n",
+      "4                  NaN           NaN           NaN      NaN       NaN   \n",
+      "...                ...           ...           ...      ...       ...   \n",
+      "16631              NaN           NaN           Km2      NaN       NaN   \n",
+      "16632              NaN           NaN    Vaccinated      NaN       NaN   \n",
+      "16633              NaN           NaN           Kph      NaN       NaN   \n",
+      "16634              NaN           NaN           Km2      NaN       NaN   \n",
+      "16635              NaN           NaN    Vaccinated      NaN       NaN   \n",
+      "\n",
+      "      Start Year Start Month  End Year  End Month          CPI  \n",
+      "0           1900         NaN      1900        NaN  2,849084409  \n",
+      "1           1900         NaN      1900        NaN  2,849084409  \n",
+      "2           1902         4.0      1902        4.0  2,963047785  \n",
+      "3           1902         4.0      1902        4.0  2,963047785  \n",
+      "4           1902        10.0      1902       10.0  2,963047785  \n",
+      "...          ...         ...       ...        ...          ...  \n",
+      "16631       2023         2.0      2023        3.0          NaN  \n",
+      "16632       2023         1.0      2023        1.0          NaN  \n",
+      "16633       2023         2.0      2023        3.0          NaN  \n",
+      "16634       2023         1.0      2023        1.0          NaN  \n",
+      "16635       2023         2.0      2023        3.0          NaN  \n",
+      "\n",
+      "[16636 rows x 27 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
    ]
   },
   {
@@ -1142,7 +1242,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16636, 27)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape #(16636, 27)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1157,38 +1277,25 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df.columns\n",
+    "'''Index(['Dis No', 'Year', 'Seq', 'Disaster Subgroup', 'Disaster Type',\n",
+    "       'Disaster Subtype', 'Country', 'ISO', 'Region', 'Continent', 'Location',\n",
+    "       'Origin', 'Associated Dis', 'Associated Dis2', 'OFDA Response',\n",
+    "       'Appeal', 'Declaration', 'AID Contribution', 'Dis Mag Value',\n",
+    "       'Dis Mag Scale', 'Latitude', 'Longitude', 'Start Year', 'Start Month',\n",
+    "       'End Year', 'End Month', 'CPI'],\n",
+    "      dtype='object')'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16636, 27)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1550,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,7 +1573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../Data/02ParaLimpiar/02desastres_colsreducidas.csv', index=False)"
+    "df.to_csv('../../Data/02ParaLimpiar/02desastres_colsreducidas.csv', index=False, sep=';', encoding='utf-8')"
    ]
   },
   {
@@ -1474,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset con reducción de columnas. Queda limpiar nulls"
+    "Dataset con reducción de columnas. Falta limpiar nulls o cambiar por otros valores."
    ]
   }
  ],
