--- a/Notebooks/00ExplorarDatos/00Ele_ExplorarDatos.ipynb
+++ b/Notebooks/00ExplorarDatos/00Ele_ExplorarDatos.ipynb
@@ -1182,7 +1182,7 @@
    "source": [
     "df_year_continent = df.groupby (['Year', 'Continent'])['Disaster Type'].value_counts()\n",
     "\n",
-    "sns.catplot(data)"
+    "sns.catplot(df)"
    ]
   }
  ],
