--- a/Notebooks/02EDADatosLimpios/Alejandra/01_Ale_LimpiarDatos.ipynb
+++ b/Notebooks/02EDADatosLimpios/Alejandra/01_Ale_LimpiarDatos.ipynb
@@ -3094,7 +3094,7 @@
    "outputs": [],
    "source": [
     "# Pivot table\n",
-    "# Visualización relacional tipo"
+    "# Visualización relacional"
    ]
   },
   {
